more alignment fixes

--- a/src/components/CMS/POSOW_FORM/CapturePO_SOW.css
+++ b/src/components/CMS/POSOW_FORM/CapturePO_SOW.css
@@ -8,6 +8,8 @@
 }
 .posow-SaveButton {
   margin: 1rem;
+  display: flex;
+  justify-content: flex-end;
 }
 .posow-status {
   display: flex;
